# GiST-Tree

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  animation.py  bds_projet.sql  cascade.py  cascade_c_09.py  data.py  docker-compose.yml  drop.py  dynamic.py  func.py  functions.py  gist.py  gist_tree.py  gist_viz.py  init.sql  justfile  load_data.sh  main.py  mono.backup.rar  mono.py  plpython.py  pyproject.toml  queries.sql  r-tree.py  r-tree.sql  r_tree.py  rtree.py  rtree.sql  test.py  tree.csv  view.py  viz.py
DataPlotly/: Bar.html
initdb/: 01_extensions.sql  02_functions.sql  03_tables.sql
queries/: functions.sql  indices.sql
scripts/: r_tree.py
sql/: pl_py_1.sql
src/gist_tree/: func.py  gist_viz.py  r_tree.py
